# Q3

./: Advance_Rag.ipynb  Assignment1.md  Assignment2.md  Assignment3.ipynb  Assignment4.ipynb  Assignment5.ipynb  FunctionCall_Langchain.ipynb  LangChain_ToolCall_Calc.ipynb  Rag_CSV.ipynb  Rag_Proj.ipynb
CrewAi/crew/: README.md  fun_fact.md  pyproject.toml
CrewAi/crew/23febsimplecrewexample/: README.md  pyproject.toml
CrewAi/crew/23febsimplecrewexample/src/23febsimplecrewexample/: crew.py  main.py
CrewAi/crew/flow1/: README.md  pyproject.toml
CrewAi/crew/flow1/src/flow1/: main.py
CrewAi/crew/src/crew/: __init__.py  chaining.py  main.py  main1.py
New folder/firstUV/: README.md  pyproject.toml
New folder/firstUV/src/: outside.py
New folder/firstUV/src/firstuv/: __init__.py
New folder/helloUv/: hello.py  pyproject.toml
UV/liteLLm/project/: README.md  pyproject.toml
UV/liteLLm/project/src/project/: __init__.py
UV/project1/: README.md  pyproject.toml
UV/project1/src/: outside.py
UV/project1/src/project1/: __init__.py  hello.py
crewai1/project/: README.md  pyproject.toml
