[project]
name = "crew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "beyg1", email = "abdulrubbaig1@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.100.1",
]

[project.scripts]
crew = "crew:main"
crew2 = "crew.main:main2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
