[project]
name = "crew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "beyg1", email = "abdulrubbaig1@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.100.1",
    "litellm>=1.59.8",
]

[project.scripts]
crew = "crew:main"  # running main function from default file __init__.py
crew2 = "crew.main:main2" # running main2 function from main.py
prompt_chain = "crew.chaining:kickoff"
routerFlow = "crew.main1:kickoff"
plotFlow = "crew.main1:plot"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
