[project]
name = "firstuv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "beyg1", email = "abdulrubbaig1@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
firstuv = "firstuv:main"            (default __init.py___ file selected)
newScript = "firstuv.hello:hello"    (hello.py file selected)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
