[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "beyg1", email = "abdulrubbaig1@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.100.1",
    "crewai-tools>=0.33.0",
    "litellm>=1.59.8",
]

[project.scripts]
project = "project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
