[project]
name = "flow1"
version = "0.1.0"
description = "flow1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
]

[project.scripts]
kickoff = "flow1.main:kickoff"
plot = "flow1.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
